--- a/Projects/Spring2025/hng8_rdh247_dow26/index.html
+++ b/Projects/Spring2025/hng8_rdh247_dow26/index.html
@@ -353,7 +353,7 @@
     <div class="row" style="text-align:center;">
           <h2>Group & Work Distribution</h2>
           <div style="text-align:center;">
-              <img class="img-rounded" src="pics/group.JPG" alt="Group 3" style="width:70%;">
+              <img class="img-rounded" src="pics/group.jpg" alt="Group 3" style="width:70%;">
           </div>
           <br>
           <div class="col-md-4" style="font-size:16px">
