fixing student images

--- a/Projects/Spring2025/aj477_ll758_ses439/index.html
+++ b/Projects/Spring2025/aj477_ll758_ses439/index.html
@@ -270,7 +270,7 @@
     </figure>
     <div style="display: flex; justify-content: center; align-items: center; gap: 20px;">
       <figure style="width: 25%;">
-        <img src="assets/pickles.png" alt="Cucumber Pickles" style="width: 100%;">
+        <img src="assets/Pickles.png" alt="Cucumber Pickles" style="width: 100%;">
         <figcaption>Pickles: the inspiration for Cucumber’s name</figcaption>
       </figure>
     </div>
@@ -1344,7 +1344,7 @@
 
     <h4>Growl</h4>
     <figure>
-      <img src="assets/audio/growl.png" alt="growl sound wave" style="width: 80%;">
+      <img src="assets/audio/Growl.png" alt="growl sound wave" style="width: 80%;">
       <figcaption>Figure: Growl spectrogram and mathematical approximation in Desmos</figcaption>
     </figure>
     <p>Using Sonic Visualizer on a recorded snippet of a dog growl, the spectogram of a dog growl can be viewed as a series of fast sine waves centered at around 100 Hz with a small amplitude. Each sine wave has a period of around 3696 samples or 73ms. The overall growl duration is 50000 samples or 1 second. Not shown in the graph is the addition of fake jitter in our code implementation for a more natural sounding growl noise. This is done by creating an array of 7 small integers (-10 to 10 range) and adding it to the final frequency by indexing this array. Mathematically, this can be represented as \[f(t)=100+20\cdot\sin\left(0.0017t\right)+\text{jitter}\] The code implementation is similar to the bark sound, with the only difference being the frequency equation. The snippet of this frequency code is shown below.</p>
@@ -1363,7 +1363,7 @@
 
     <h4>Howl</h4>
     <figure>
-      <img src="assets/audio/howl.png" alt="howl sound wave" style="width: 80%;">
+      <img src="assets/audio/Howl.png" alt="howl sound wave" style="width: 80%;">
       <figcaption>Figure: Howl spectrogram and mathematical approximation in Desmos</figcaption>
     </figure>
     <p>A recording of the general howl sound from the dog's speaker is also included below</p>
