more fixing images

--- a/Projects/Spring2025/aj477_ll758_ses439/index.html
+++ b/Projects/Spring2025/aj477_ll758_ses439/index.html
@@ -1303,7 +1303,7 @@
     <h4>Bark</h4>
     <div style="display: flex; justify-content: center;">
       <figure>
-      <img src="assets/audio/bark.png" alt="bark sound wave" style="width: 80%;">
+      <img src="assets/audio/Bark.png" alt="bark sound wave" style="width: 80%;">
       <figcaption>Figure: Bark spectrogram and mathematical approximation in Desmos</figcaption>
       </figure>
     </div>
