fixing broken links

--- a/Projects/Spring2025/aml399_ayl47_vml37/index.html
+++ b/Projects/Spring2025/aml399_ayl47_vml37/index.html
@@ -97,7 +97,7 @@
 									<span class="image">
 										<img src="images/pic01.jpg" alt="" />
 									</span>
-									<a href="high_level.html">
+									<a href="High_Level.html">
 										<h2>High-Level</h2>
 										<div class="content">
 										</div>
@@ -107,7 +107,7 @@
 									<span class="image">
 										<img src="images/pic02.jpg" alt="" />
 									</span>
-									<a href="background.html">
+									<a href="Background.html">
 										<h2>Approach and Background</h2>
 										<div class="content">
 										</div>
