fixing broken links

--- a/Projects/Spring2025/aml399_ayl47_vml37/Results.html
+++ b/Projects/Spring2025/aml399_ayl47_vml37/Results.html
@@ -39,10 +39,14 @@
 					<h2>Menu</h2>
 					<ul>
 						<li><a href="index.html">Home</a></li>
-						<li><a href="generic.html">Project Background</a></li>
-						<li><a href="generic.html">Design</a></li>
-						<li><a href="generic.html">Results and Conclusions</a></li>
-						<li><a href="elements.html">Code</a></li>
+						<li><a href="High_Level.html">High-Level</a></li>
+						<li><a href="Background.html">Background</a></li>
+						<li><a href="Design.html">Design</a></li>
+						<li><a href="Results.html">Results</a></li>
+						<li><a href="Conclusion.html">Conclusion</a></li>
+						<li><a href="Code.html">Code</a></li>
+						<li><a href="Images.html">Images</a></li>
+						<li><a href="Appendices.html">Appendices</a></li>
 					</ul>
 				</nav>
 
