--- a/index.html
+++ b/index.html
@@ -13236,7 +13236,7 @@ div#notebook {
 <li><a href="https://vanhunteradams.com/Pico/Bootloader/Bootloader.html">Custom serial bootloader for RP2040</a></li>
 <li><a href="https://vanhunteradams.com/Pico/Bootloader/Worm.html">Worm-like serial bootloader for RP2040</a></li>
 </ul>
-<p><strong>Bruce (RP2040)</strong></p>
+<p><strong>Bruce (RP2040 and RP2350)</strong></p>
 <ul>
 <li><a href="https://people.ece.cornell.edu/land/courses/ece4760/RP2040/Startup_message/startup.html">Start-up message and compile info</a></li>
 <li><a href="https://people.ece.cornell.edu/land/courses/ece4760/RP2040/C_SDK_vga16_protothreads/index_vga_Protothreads.html">16-color VGA and Joystick on RP2040</a></li>
@@ -13257,6 +13257,13 @@ div#notebook {
 <li><a href="https://people.ece.cornell.edu/land/courses/ece4760/RP2040/C_SDK_Lattice_Boltzmann/index_LB.html">Lattice-Boltzmann on RP2040</a></li>
 <li><a href="https://people.ece.cornell.edu/land/courses/ece4760/RP2040/index_rp2040_Micropython.html">Micropython experimentation on RP2040</a></li>
 <li><a href="https://people.ece.cornell.edu/land/courses/ece4760/RP2040/index_rp2040_MBED.html">MBED for RP2040 (+steppers, NTSC video, DLA, FFT, Specra)</a></li>
+<li><a href="https://people.ece.cornell.edu/land/courses/ece4760/pi_pico/more_io_ports/index_io_ports.html">Expanding i/o for the RP2040/2350</a></li>
+<li><a href="https://people.ece.cornell.edu/land/courses/ece4760/pi_pico/vga16_3D_polygons/index_vga_3D.html">VGA 16 640x480 3D perspective polygon render</a></li>
+<li><a href="https://people.ece.cornell.edu/land/courses/ece4760/pi_pico/wifi_ntp_vga16_aon/index_ntp_vga16_aon.html">NTP on both RP2040 and RP2350</a></li>
+<li><a href="https://people.ece.cornell.edu/land/courses/ece4760/RP2350/FFT_iFFT/index_FFT_iFFT.html">FFT, signal processing, IFFT while minimizing framing discontinuities</a></li>
+<li><a href="https://people.ece.cornell.edu/land/courses/ece4760/RP2350/PDE_string_synth/index_PDE_synth.html">Partial differential equation string synthesis on RP2350</a></li>
+<li><a href="https://people.ece.cornell.edu/land/courses/ece4760/RP2350/gravity/index_gravity.html">Gravity particle simulation on RP2350</a></li>
+<li><a href="https://people.ece.cornell.edu/land/courses/ece4760/pi_pico/sd_card_reader_pico2/index_sd_card.html">SD card reader for RP2350</a></li>
 </ul>
 <p><strong>Hunter (PIC32)</strong></p>
 <ul>
@@ -13285,6 +13292,7 @@ div#notebook {
 <h4 id="Some-useful-links-and-reading">Some useful links and reading<a class="anchor-link" href="#Some-useful-links-and-reading">&#182;</a></h4><ul>
 <li><a href="https://dwheeler.com/essays/debugging-agans.html">David Wheeler's review of <em>Debugging</em> by David Agans</a></li>
 <li><a href="https://www.amazon.com/Bits-Bugs-Scientific-Historical-Computational/dp/1611975557">Bits and Bugs: A scientific and historical review of software failures in computational science</a></li>
+<li><a href="./Resources/Cornell_Compute.pdf">A history of computing at Cornell</a></li>
 </ul>
 
 </div>
