--- a/index.html
+++ b/index.html
@@ -13313,14 +13313,21 @@ div#notebook {
 <ul>
 <li><strong>Instructor</strong>: Hunter Adams (<a href="https://www.engineering.cornell.edu/faculty-directory/hunter-adams">Cornell page</a>, <a href="https://vanhunteradams.com">personal website</a>)</li>
 <li>Retired instructor: Bruce Land (<a href="https://people.ece.cornell.edu/land/">website</a>)</li>
-<li>Teaching Assistants<blockquote><h2 id="--">- <a class="anchor-link" href="#--">&#182;</a></h2><h2 id="--">- <a class="anchor-link" href="#--">&#182;</a></h2><p>-</p>
+<li>Teaching Assistants<blockquote><ul>
+<li>Anne Liu (ayl47)</li>
+<li>Vicky Le (vml37)</li>
+<li>Paige Shelton (pes99)</li>
+<li>Sam Belliveau (srb343)</li>
+<li>Daniel Wahab (dow26)</li>
+<li>Henry Calderon (hcc54)</li>
+</ul>
 </blockquote>
 </li>
 <li>Course dog: <a href="https://vanhunteradams.com/Pickles/Pickles.png">Pickles</a></li>
 </ul>
 <p><strong>Lecture and lab schedule</strong></p>
 <ul>
-<li>Lectures (Location TBD): MWF, 12:20-1:10</li>
+<li>Lectures (Phillips 101): MWF, 12:20-1:10</li>
 <li>Laboratory sections (Phillips 238): WRF, 13:25-17:25 ; R 8:00-11:00 ; R 4:30-7:30</li>
 <li>Extra open-lab hours (Phillips 238): To be scheduled</li>
 <li>Office hours: You may come to any lab section and I'll be there. If you'd like to meet individually, please send me an email.</li>
