added my office

--- a/index.html
+++ b/index.html
@@ -13331,6 +13331,7 @@ div#notebook {
 <li>Laboratory sections (Phillips 238): WRF, 13:25-17:25 ; R 8:00-11:00 ; R 4:30-7:30</li>
 <li>Extra open-lab hours (Phillips 238): To be scheduled</li>
 <li>Office hours: You may come to any lab section and I'll be there. If you'd like to meet individually, please send me an email.</li>
+<li>Hunter's office is CIS 412</li>
 </ul>
 <p><strong>Lecture recordings</strong></p>
 <ul>
