--- a/Projects/Projects.html
+++ b/Projects/Projects.html
@@ -13101,6 +13101,20 @@ div#notebook {
 <div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
+<h3 id="Fall,-2025">Fall, 2025<a class="anchor-link" href="#Fall,-2025">&#182;</a></h3><p>Projects listed in no particular order.</p>
+<ol>
+<li><a href="./Fall2025/ml2855_yg642_ijm28/index.html">3D Audio Localization</a> (<a href="https://www.youtube.com/watch?v=-fpQ5uqi_rU&amp;list=PLDqMkB5cbBA6AwYC_DElkDStUdOsTuIL7&amp;index=1&amp;pp=gAQBiAQBsAgC">video demonstration</a>)</li>
+<li><a href="./Fall2025/tal96_yc2897/index.html">TARS Robot</a> (<a href="https://www.youtube.com/watch?v=GPUHrVxhgUQ&amp;list=PLDqMkB5cbBA6AwYC_DElkDStUdOsTuIL7&amp;index=2&amp;pp=gAQBiAQBsAgC">video demonstration</a>)</li>
+<li><a href="./Fall2025/mff56_mc2564/index.html">Samur-Pi</a></li>
+<li><a href="./Fall2025/jr2487_tl955/index.html">Rubic's cube solver</a> (<a href="https://www.youtube.com/watch?v=xEEFOJA4oqk">video demonstration</a>)</li>
+</ol>
+
+</div>
+</div>
+</div>
+<div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
+</div><div class="inner_cell">
+<div class="text_cell_render border-box-sizing rendered_html">
 <h3 id="Spring,-2025">Spring, 2025<a class="anchor-link" href="#Spring,-2025">&#182;</a></h3><p>Projects listed in no particular order.</p>
 <ol>
 <li><a href="./Spring2025/acm289_el595_qx99/index.html">Clocktower LED's</a> (<a href="https://www.youtube.com/watch?v=BlySUTFZxhw&amp;list=PLDqMkB5cbBA6AwYC_DElkDStUdOsTuIL7&amp;index=35&amp;t=8s&amp;pp=gAQBiAQB">video demonstration</a>)</li>
