--- a/Projects/Projects.html
+++ b/Projects/Projects.html
@@ -13107,6 +13107,7 @@ div#notebook {
 <li><a href="./Fall2025/tal96_yc2897/index.html">TARS Robot</a> (<a href="https://www.youtube.com/watch?v=GPUHrVxhgUQ&amp;list=PLDqMkB5cbBA6AwYC_DElkDStUdOsTuIL7&amp;index=2&amp;pp=gAQBiAQBsAgC">video demonstration</a>)</li>
 <li><a href="./Fall2025/mff56_mc2564/index.html">Samur-Pi</a></li>
 <li><a href="./Fall2025/jr2487_tl955/index.html">Rubic's cube solver</a> (<a href="https://www.youtube.com/watch?v=xEEFOJA4oqk">video demonstration</a>)</li>
+<li><a href="./Fall2025/ocn3_pz269_kh873/index.html">WiFi Walkie Talkies</a> (<a href="https://www.youtube.com/watch?v=615_7CmObtg">video demonstration</a>)</li>
 </ol>
 
 </div>
