--- a/Projects/Projects.html
+++ b/Projects/Projects.html
@@ -13109,6 +13109,7 @@ div#notebook {
 <li><a href="./Fall2025/jr2487_tl955/index.html">Rubic's cube solver</a> (<a href="https://www.youtube.com/watch?v=xEEFOJA4oqk">video demonstration</a>)</li>
 <li><a href="./Fall2025/ocn3_pz269_kh873/index.html">WiFi Walkie Talkies</a> (<a href="https://www.youtube.com/watch?v=615_7CmObtg">video demonstration</a>)</li>
 <li><a href="./Fall2025/acd247_xc492/index.html">Box stacker game</a> (<a href="https://www.youtube.com/watch?v=oo0r_adV2tk">video demonstration</a>)</li>
+<li><a href="./Fall2025/ch2233_ljl97_amb663/index.html">Airdrums</a> (<a href="https://www.youtube.com/watch?v=zrTrFg73C7o">video demonstration</a>)</li>
 </ol>
 
 </div>
