fixed link on airdrum page

--- a/Projects/Fall2025/ch2233_ljl97_amb663/index.html
+++ b/Projects/Fall2025/ch2233_ljl97_amb663/index.html
@@ -595,7 +595,7 @@ $$
   </p>
 
   <p>
-  <a href="docs/airdrum_chat_log.pdf" target="_blank">
+  <a href="docs/airdrum_chat_log_detailed.pdf" target="_blank">
     ChatGPT Design & Website Development Log (PDF)
   </a>
 </p>
