two more projects

--- a/Projects/Projects.html
+++ b/Projects/Projects.html
@@ -13112,6 +13112,8 @@ div#notebook {
 <li><a href="./Fall2025/ch2233_ljl97_amb663/index.html">Airdrums</a> (<a href="https://www.youtube.com/watch?v=zrTrFg73C7o">video demonstration</a>)</li>
 <li><a href="./Fall2025/wss58/report.html">WiFi Bike Navigation</a> (<a href="https://www.youtube.com/watch?v=F_KyAHahVyI">video demonstration</a>)</li>
 <li><a href="./Fall2025/gz284_cl2865_xp92/index.html">Persistence of Vision Wand</a> (<a href="https://youtu.be/efiZZ-5N_8k">video demonstration</a>)</li>
+<li><a href="./Fall2025/th737_kj349/DSDFinalLabReport.html">Virtual pinball with sonar and muscle IR inputs</a> (<a href="https://youtu.be/fEmvvQ-iMaA">video demonstration</a>)</li>
+<li><a href="./Fall2025/mp965_jk2998/index.html">CodeBuddy Timmy Educational Robot</a> (<a href="https://youtu.be/teVmPDNyPdc">video demonstration</a>)</li>
 </ol>
 
 </div>
