--- a/Projects/Fall2025/mp965_jk2998/index.html
+++ b/Projects/Fall2025/mp965_jk2998/index.html
@@ -27,7 +27,7 @@
   <main class="content">
           <figure class="figure-wide">
   <div class="image-row">
-    <img src="Timmyphoto3.jpeg" alt="Photos of timmy">
+    <img src="TimmyPhoto3.jpeg" alt="Photos of timmy">
     <img src="TimmyPhoto2.jpeg" alt="Potoso of timym">
   </div>
  
