--- a/Projects/Projects.html
+++ b/Projects/Projects.html
@@ -13114,6 +13114,7 @@ div#notebook {
 <li><a href="./Fall2025/gz284_cl2865_xp92/index.html">Persistence of Vision Wand</a> (<a href="https://youtu.be/efiZZ-5N_8k">video demonstration</a>)</li>
 <li><a href="./Fall2025/th737_kj349/DSDFinalLabReport.html">Virtual pinball with sonar and muscle IR inputs</a> (<a href="https://youtu.be/fEmvvQ-iMaA">video demonstration</a>)</li>
 <li><a href="./Fall2025/mp965_jk2998/index.html">CodeBuddy Timmy Educational Robot</a> (<a href="https://youtu.be/teVmPDNyPdc">video demonstration</a>)</li>
+<li><a href="./Fall2025/sl2847_zrs29_khy32/index.html">PicoChess</a> (<a href="https://youtu.be/cyuMKzzZeAY">video demonstration</a>)</li>
 </ol>
 
 </div>
