--- a/Projects/Projects.html
+++ b/Projects/Projects.html
@@ -13115,6 +13115,7 @@ div#notebook {
 <li><a href="./Fall2025/th737_kj349/DSDFinalLabReport.html">Virtual pinball with sonar and muscle IR inputs</a> (<a href="https://youtu.be/fEmvvQ-iMaA">video demonstration</a>)</li>
 <li><a href="./Fall2025/mp965_jk2998/index.html">CodeBuddy Timmy Educational Robot</a> (<a href="https://youtu.be/teVmPDNyPdc">video demonstration</a>)</li>
 <li><a href="./Fall2025/sl2847_zrs29_khy32/index.html">PicoChess</a> (<a href="https://youtu.be/cyuMKzzZeAY">video demonstration</a>)</li>
+<li><a href="./Fall2025/ph475_rq36_wm345/index.html">Bebe the emotive bipedal robot</a> (<a href="https://youtu.be/vSiIo-Cqozk">video demonstration</a>)</li>
 </ol>
 
 </div>
