--- a/Projects/Projects.html
+++ b/Projects/Projects.html
@@ -13116,6 +13116,7 @@ div#notebook {
 <li><a href="./Fall2025/mp965_jk2998/index.html">CodeBuddy Timmy Educational Robot</a> (<a href="https://youtu.be/teVmPDNyPdc">video demonstration</a>)</li>
 <li><a href="./Fall2025/sl2847_zrs29_khy32/index.html">PicoChess</a> (<a href="https://youtu.be/cyuMKzzZeAY">video demonstration</a>)</li>
 <li><a href="./Fall2025/ph475_rq36_wm345/index.html">Bebe the emotive bipedal robot</a> (<a href="https://youtu.be/vSiIo-Cqozk">video demonstration</a>)</li>
+<li><a href="./Fall2025/hnn4_dhy22/index.html">Ball balancing robot</a></li>
 </ol>
 
 </div>
