two more projects

--- a/Projects/Projects.html
+++ b/Projects/Projects.html
@@ -13117,6 +13117,8 @@ div#notebook {
 <li><a href="./Fall2025/sl2847_zrs29_khy32/index.html">PicoChess</a> (<a href="https://youtu.be/cyuMKzzZeAY">video demonstration</a>)</li>
 <li><a href="./Fall2025/ph475_rq36_wm345/index.html">Bebe the emotive bipedal robot</a> (<a href="https://youtu.be/vSiIo-Cqozk">video demonstration</a>)</li>
 <li><a href="./Fall2025/hnn4_dhy22/index.html">Ball balancing robot</a></li>
+<li><a href="./Fall2025/abs343_dnb68_ss3679/index.html">Penny the plotter</a> (<a href="https://youtu.be/P3Vw2PxRjWE">video demonstration</a>)</li>
+<li><a href="./Fall2025/seb353_cjl298/index.html">12-DOF Quadruped Robot with Environmental Mapping</a> (<a href="https://youtu.be/UDd_kxl1mZw">video demonstration</a>)</li>
 </ol>
 
 </div>
