--- a/Projects/Projects.html
+++ b/Projects/Projects.html
@@ -13119,6 +13119,7 @@ div#notebook {
 <li><a href="./Fall2025/hnn4_dhy22/index.html">Ball balancing robot</a></li>
 <li><a href="./Fall2025/abs343_dnb68_ss3679/index.html">Penny the plotter</a> (<a href="https://youtu.be/P3Vw2PxRjWE">video demonstration</a>)</li>
 <li><a href="./Fall2025/seb353_cjl298/index.html">12-DOF Quadruped Robot with Environmental Mapping</a> (<a href="https://youtu.be/UDd_kxl1mZw">video demonstration</a>)</li>
+<li><a href="./Fall2025/atn54_ajd279_hh828/index.html">Earie audio localizer</a> (<a href="https://youtu.be/4A7VYkjCG00">video demonstration</a>)</li>
 </ol>
 
 </div>
