--- a/Projects/Fall2025/atn54_ajd279_hh828/high-level-design.html
+++ b/Projects/Fall2025/atn54_ajd279_hh828/high-level-design.html
@@ -6,13 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" /><meta name="viewport" content="width=device-width, initial-scale=1" />
 
     <title>High Level Design &#8212; Earie 0.1 documentation</title>
-    <link rel="stylesheet" type="text/css" href="_static/pygments.css?v=b86133f3" />
-    <link rel="stylesheet" type="text/css" href="_static/basic_mod.css?v=9b2032db" />
-    <script src="_static/documentation_options.js?v=2709fde1"></script>
-    <script src="_static/doctools.js?v=9bcbadda"></script>
-    <script src="_static/sphinx_highlight.js?v=dc90522c"></script>
-    <script src="_static/js/theme.js"></script>
-    <script src="_static/js/petite-vue.js"></script>
+    <link rel="stylesheet" type="text/css" href="static/pygments.css?v=b86133f3" />
+    <link rel="stylesheet" type="text/css" href="static/basic_mod.css?v=9b2032db" />
+    <script src="static/documentation_options.js?v=2709fde1"></script>
+    <script src="static/doctools.js?v=9bcbadda"></script>
+    <script src="static/sphinx_highlight.js?v=dc90522c"></script>
+    <script src="static/js/theme.js"></script>
+    <script src="static/js/petite-vue.js"></script>
     <link rel="index" title="Index" href="genindex.html" />
     <link rel="search" title="Search" href="search.html" />
     <link rel="next" title="Program &amp; Hardware Design" href="program-hardware-design.html" />
@@ -142,7 +142,7 @@
 <p>In this project, we focused solely on the auditory sense and did not take sight into account. This is because visual cues could dominate the auditory cues via the Ventriloquist Effect.</p>
 <p>The azimuthal angle measures the degree of horizontal movement when the head is turned left or right. The polar angle, on the other hand, measures the vertical movement when the head is tilted up or down.</p>
 <p>One of the key features of stereo audio that can be used for sound localization is the interaural time difference (ITD). By measuring the difference in time between the two signals, we can use the distance between the two microphones to calculate the angle, relative to the axis intersecting both microphones, that the sound came from. Given that the sound source is sufficiently further from the measurement than the distance between the microphones, we can very simply calculate the angle from the interaural time difference as shown below</p>
-<a class="reference internal image-reference" href="_images/calculation.png"><img alt="Calculation" class="align-center" src="_images/calculation.png" style="width: 1000px;" />
+<a class="reference internal image-reference" href="images/calculation.png"><img alt="Calculation" class="align-center" src="images/calculation.png" style="width: 1000px;" />
 </a>
 <p>Given that the additional distance is D () and we know the speed of sound, we can calculate the angle from the time difference as: = -1(c (ITD)D). However, this relies on  a small angle assumption that requires that the source is sufficiently far away such that the angle of each ear relative to the sound source is sufficiently close together.</p>
 <p>We chose 44100Hz as the sample rate, as it is a conventional high resolution audio recording frequency. In selecting this recording frequency we had to balance resolution in the data stream necessary to classify audio spatialization against the hardware limitations of the raspberry pi, as we had to exchange data into the SD card via a buffer in real time during audio recording.</p>
