--- a/Projects/Fall2025/atn54_ajd279_hh828/genindex.html
+++ b/Projects/Fall2025/atn54_ajd279_hh828/genindex.html
@@ -5,13 +5,13 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Index &#8212; Earie 0.1 documentation</title>
-    <link rel="stylesheet" type="text/css" href="_static/pygments.css?v=b86133f3" />
-    <link rel="stylesheet" type="text/css" href="_static/basic_mod.css?v=9b2032db" />
-    <script src="_static/documentation_options.js?v=2709fde1"></script>
-    <script src="_static/doctools.js?v=9bcbadda"></script>
-    <script src="_static/sphinx_highlight.js?v=dc90522c"></script>
-    <script src="_static/js/theme.js"></script>
-    <script src="_static/js/petite-vue.js"></script>
+    <link rel="stylesheet" type="text/css" href="static/pygments.css?v=b86133f3" />
+    <link rel="stylesheet" type="text/css" href="static/basic_mod.css?v=9b2032db" />
+    <script src="static/documentation_options.js?v=2709fde1"></script>
+    <script src="static/doctools.js?v=9bcbadda"></script>
+    <script src="static/sphinx_highlight.js?v=dc90522c"></script>
+    <script src="static/js/theme.js"></script>
+    <script src="static/js/petite-vue.js"></script>
     <link rel="index" title="Index" href="#" />
     <link rel="search" title="Search" href="search.html" /> 
   </head><body data-dark_mode_code_blocks="true">
