two more projects

--- a/Projects/Projects.html
+++ b/Projects/Projects.html
@@ -13120,6 +13120,8 @@ div#notebook {
 <li><a href="./Fall2025/abs343_dnb68_ss3679/index.html">Penny the plotter</a> (<a href="https://youtu.be/P3Vw2PxRjWE">video demonstration</a>)</li>
 <li><a href="./Fall2025/seb353_cjl298/index.html">12-DOF Quadruped Robot with Environmental Mapping</a> (<a href="https://youtu.be/UDd_kxl1mZw">video demonstration</a>)</li>
 <li><a href="./Fall2025/atn54_ajd279_hh828/index.html">Earie audio localizer</a> (<a href="https://youtu.be/4A7VYkjCG00">video demonstration</a>)</li>
+<li><a href="./Fall2025/ej289_mt687/index.html">BLDC Motor Controller</a> (<a href="https://youtu.be/rIWBHGgYc5c">video demonstration</a>)</li>
+<li><a href="./Fall2025/yc2832_vsc32/index.html">Vision-guided Ball Catcher</a> (<a href="https://youtu.be/ZalUMAx4A78">video demonstration</a>)</li>
 </ol>
 
 </div>
