--- a/Projects/Projects.html
+++ b/Projects/Projects.html
@@ -13123,6 +13123,8 @@ div#notebook {
 <li><a href="./Fall2025/ej289_mt687/index.html">BLDC Motor Controller</a> (<a href="https://youtu.be/rIWBHGgYc5c">video demonstration</a>)</li>
 <li><a href="./Fall2025/yc2832_vsc32/index.html">Vision-guided Ball Catcher</a> (<a href="https://youtu.be/ZalUMAx4A78">video demonstration</a>)</li>
 <li><a href="./Fall2025/rwl228_iv74/index.html">ScopeBoy: Handheld Mixed-Domain Oscilloscope</a> (<a href="https://youtu.be/MxbmWoJlQEc">video demonstration</a>)</li>
+<li><a href="./Fall2025/tt549_rdp78/final_project.html">Ultrasonic 2D Object Mapping and Predictive Tracking System</a> (<a href="https://youtu.be/WmSY0NXBI08">video demonstration</a>)</li>
+<li><a href="./Fall2025/hn347_scz6_ma969/index.html">Flappy Bird</a> (<a href="https://youtu.be/TWBTzghpsnY">video demonstration</a>)</li>
 </ol>
 
 </div>
