--- a/Projects/Projects.html
+++ b/Projects/Projects.html
@@ -13125,6 +13125,8 @@ div#notebook {
 <li><a href="./Fall2025/rwl228_iv74/index.html">ScopeBoy: Handheld Mixed-Domain Oscilloscope</a> (<a href="https://youtu.be/MxbmWoJlQEc">video demonstration</a>)</li>
 <li><a href="./Fall2025/tt549_rdp78/final_project.html">Ultrasonic 2D Object Mapping and Predictive Tracking System</a> (<a href="https://youtu.be/WmSY0NXBI08">video demonstration</a>)</li>
 <li><a href="./Fall2025/hn347_scz6_ma969/index.html">Flappy Bird</a> (<a href="https://youtu.be/TWBTzghpsnY">video demonstration</a>)</li>
+<li><a href="./Fall2025/mwc87_rry9/index.html">Cornell Tower Defense</a> (<a href="https://youtu.be/jrui2HFuquc">video demonstration</a>)</li>
+<li><a href="./Fall2025/ste27_sz498/website.html">Autonomous Handwriting Robot</a></li>
 </ol>
 
 </div>
