--- a/Projects/Projects.html
+++ b/Projects/Projects.html
@@ -13127,6 +13127,8 @@ div#notebook {
 <li><a href="./Fall2025/hn347_scz6_ma969/index.html">Flappy Bird</a> (<a href="https://youtu.be/TWBTzghpsnY">video demonstration</a>)</li>
 <li><a href="./Fall2025/mwc87_rry9/index.html">Cornell Tower Defense</a> (<a href="https://youtu.be/jrui2HFuquc">video demonstration</a>)</li>
 <li><a href="./Fall2025/ste27_sz498/website.html">Autonomous Handwriting Robot</a></li>
+<li>MiniSLAM Robot (private upon request)</li>
+<li><a href="./Fall2025/iab35_lg634/webpage/main.html">Customizable computer mouse</a></li>
 </ol>
 
 </div>
