--- a/Projects/Projects.html
+++ b/Projects/Projects.html
@@ -13129,6 +13129,8 @@ div#notebook {
 <li><a href="./Fall2025/ste27_sz498/website.html">Autonomous Handwriting Robot</a></li>
 <li>MiniSLAM Robot (private upon request)</li>
 <li><a href="./Fall2025/iab35_lg634/webpage/main.html">Customizable computer mouse</a></li>
+<li><a href="./Fall2025/ace68_hle37_lag289/ace68_hle37_lag289.html">DigiDrum Airdrums</a> (<a href="https://youtu.be/fSZf4prnDR0">video demonstration</a>)</li>
+<li><a href="./Fall2025/kb593_flp23/index.html">Pico Pasture Cow Herding Simulation</a> (<a href="https://youtu.be/7NQLgskAEZM">video demonstration</a>)</li>
 </ol>
 
 </div>
