--- a/Projects/Projects.html
+++ b/Projects/Projects.html
@@ -13131,6 +13131,7 @@ div#notebook {
 <li><a href="./Fall2025/iab35_lg634/webpage/main.html">Customizable computer mouse</a></li>
 <li><a href="./Fall2025/ace68_hle37_lag289/ace68_hle37_lag289.html">DigiDrum Airdrums</a> (<a href="https://youtu.be/fSZf4prnDR0">video demonstration</a>)</li>
 <li><a href="./Fall2025/kb593_flp23/index.html">Pico Pasture Cow Herding Simulation</a> (<a href="https://youtu.be/7NQLgskAEZM">video demonstration</a>)</li>
+<li><a href="./Fall2025/ag2285_zsj5/index.html">Autocross Car Instrumentation</a></li>
 </ol>
 
 </div>
