--- a/Projects/Projects.html
+++ b/Projects/Projects.html
@@ -13132,6 +13132,7 @@ div#notebook {
 <li><a href="./Fall2025/ace68_hle37_lag289/ace68_hle37_lag289.html">DigiDrum Airdrums</a> (<a href="https://youtu.be/fSZf4prnDR0">video demonstration</a>)</li>
 <li><a href="./Fall2025/kb593_flp23/index.html">Pico Pasture Cow Herding Simulation</a> (<a href="https://youtu.be/7NQLgskAEZM">video demonstration</a>)</li>
 <li><a href="./Fall2025/ag2285_zsj5/index.html">Autocross Car Instrumentation</a></li>
+<li><a href="./Fall2025/yz3545_hy665_qz425/index.html">Text to speech</a> (<a href="https://youtu.be/l-Kj-9ZnBKY">video demonstration</a>)</li>
 </ol>
 
 </div>
