--- a/Projects/Projects.html
+++ b/Projects/Projects.html
@@ -13133,6 +13133,7 @@ div#notebook {
 <li><a href="./Fall2025/kb593_flp23/index.html">Pico Pasture Cow Herding Simulation</a> (<a href="https://youtu.be/7NQLgskAEZM">video demonstration</a>)</li>
 <li><a href="./Fall2025/ag2285_zsj5/index.html">Autocross Car Instrumentation</a></li>
 <li><a href="./Fall2025/yz3545_hy665_qz425/index.html">Text to speech</a> (<a href="https://youtu.be/l-Kj-9ZnBKY">video demonstration</a>)</li>
+<li><a href="./Fall2025/mi266_cl2367/index.html">Physical PocketChess</a></li>
 </ol>
 
 </div>
