--- a/Projects/Projects.html
+++ b/Projects/Projects.html
@@ -13134,6 +13134,8 @@ div#notebook {
 <li><a href="./Fall2025/ag2285_zsj5/index.html">Autocross Car Instrumentation</a></li>
 <li><a href="./Fall2025/yz3545_hy665_qz425/index.html">Text to speech</a> (<a href="https://youtu.be/l-Kj-9ZnBKY">video demonstration</a>)</li>
 <li><a href="./Fall2025/mi266_cl2367/index.html">Physical PocketChess</a></li>
+<li><a href="./Fall2025/aph74_jbc282/index.html">SpectroTuner</a> (<a href="https://youtu.be/ck99bB3yAcM">video demonstration</a>)</li>
+<li><a href="./Fall2025/am2736_sp2222/index.html">3D Orientation Mouse</a> (<a href="https://youtu.be/Hqhhgok1frU">video demonstration</a>)</li>
 </ol>
 
 </div>
