--- a/Projects/Projects.html
+++ b/Projects/Projects.html
@@ -13136,6 +13136,7 @@ div#notebook {
 <li><a href="./Fall2025/mi266_cl2367/index.html">Physical PocketChess</a></li>
 <li><a href="./Fall2025/aph74_jbc282/index.html">SpectroTuner</a> (<a href="https://youtu.be/ck99bB3yAcM">video demonstration</a>)</li>
 <li><a href="./Fall2025/am2736_sp2222/index.html">3D Orientation Mouse</a> (<a href="https://youtu.be/Hqhhgok1frU">video demonstration</a>)</li>
+<li><a href="./Fall2025/sjz44_glk49_rcw253/final_report.html">Autonomous Drawing Car</a> (<a href="https://youtu.be/8FTqkum7d4I">video demonstration</a>)</li>
 </ol>
 
 </div>
