--- a/Projects/Projects.html
+++ b/Projects/Projects.html
@@ -13137,6 +13137,7 @@ div#notebook {
 <li><a href="./Fall2025/aph74_jbc282/index.html">SpectroTuner</a> (<a href="https://youtu.be/ck99bB3yAcM">video demonstration</a>)</li>
 <li><a href="./Fall2025/am2736_sp2222/index.html">3D Orientation Mouse</a> (<a href="https://youtu.be/Hqhhgok1frU">video demonstration</a>)</li>
 <li><a href="./Fall2025/sjz44_glk49_rcw253/final_report.html">Autonomous Drawing Car</a> (<a href="https://youtu.be/8FTqkum7d4I">video demonstration</a>)</li>
+<li><a href="./Fall2025/amc564_jjm498_ar929/FinalWebsite.html">Two-Wheeled Self-Balancing Robot</a> (<a href="https://youtu.be/Jd0DRI0JFwQ">video demonstration</a>)</li>
 </ol>
 
 </div>
