links to project page

--- a/Projects/Projects.html
+++ b/Projects/Projects.html
@@ -13140,6 +13140,10 @@ div#notebook {
 <li><a href="./Fall2025/amc564_jjm498_ar929/FinalWebsite.html">Two-Wheeled Self-Balancing Robot</a> (<a href="https://youtu.be/Jd0DRI0JFwQ">video demonstration</a>)</li>
 <li><a href="./Fall2025/sjb336_jg244_mss464/index.html">Self-Balancing Robot</a> (<a href="https://youtu.be/V_mZqi3zYsA">video demonstration</a>)</li>
 <li><a href="./Fall2025/jfg99_jdg289/index.html">DJ Mixer</a> (<a href="https://youtu.be/CZQLPcjue1o">video demonstration</a>)</li>
+<li><a href="./Fall2025/my394_dmp282_xz834/index.html">Automated Test Equipment</a></li>
+<li><a href="./Fall2025/eu52_fn72/index.html">Pico WiiMote</a> (<a href="https://youtu.be/qxkjN0_n0uU">video demonstration</a>)</li>
+<li><a href="./Fall2025/dcp243_jk2878/writeup.html">Snake-Inspired Game</a> (<a href="https://youtu.be/Gj2DFg01Oc0">video demonstration</a>)</li>
+<li><a href="./Fall2025/jk2582_cjm369_mlh348/index.html">Logic Analyzer</a></li>
 </ol>
 
 </div>
