links to project page

--- a/Projects/Projects.html
+++ b/Projects/Projects.html
@@ -13144,6 +13144,7 @@ div#notebook {
 <li><a href="./Fall2025/eu52_fn72/index.html">Pico WiiMote</a> (<a href="https://youtu.be/qxkjN0_n0uU">video demonstration</a>)</li>
 <li><a href="./Fall2025/dcp243_jk2878/writeup.html">Snake-Inspired Game</a> (<a href="https://youtu.be/Gj2DFg01Oc0">video demonstration</a>)</li>
 <li><a href="./Fall2025/jk2582_cjm369_mlh348/index.html">Logic Analyzer</a></li>
+<li><a href="./Fall2025/akk85_dv258_jws434/index.html">Star tracker</a> (<a href="https://youtu.be/mN4AUj1KYqI">video demonstration</a>)</li>
 </ol>
 
 </div>
